--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <% if policy(Category).create? %>
   <%= link_to new_category_path do %>
-      <p>New category</p>
+      <p>New idea category</p>
   <% end %>
 <% end %>
 
