--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,13 +1,16 @@
-<%= link_to root_path do %>
-  <%= image_tag 'ideally-logotype.png', id: 'logo' %>
-<% end %>
+<div class="nav-container d-flex">
+  <div class="logo-box bd-highlight p-3">
+    <%= link_to root_path do %>
+      <%= image_tag 'ideally-logotype.png', id: 'logo' %>
+    <% end %>
+  </div>
+  <div class="bd-highlight w-100"></div>
 
-<% if user_signed_in? %>
-      <div class="nav-item">
-      <%= link_to 'sign out', destroy_user_session_path, method: :delete, class: "nav-link" %>
-      </div>
-    <% else %>
-      <div class="nav-item">
+<div class="nav-button flex-shrink-1 bd-highlight p-3 d-flex align-items-center">
+    <% if user_signed_in? %>
+          <%= link_to 'sign out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+      <% else %>
         <%= link_to 'sign in', new_user_session_path, class: "nav-link" %>
-      </div>
-<% end %>
+    <% end %>
+  </div>
+</div>
