--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,7 +128,7 @@ a {
   padding: 15px;
   border-left: 2px solid $black;
   border-bottom: 2px solid $black;
-  border-right: 2px solid $black;
+  // border-right: 2px solid $black;
   background-color: $white;
     &:hover {
       background-color: $yellow;
@@ -136,11 +136,16 @@ a {
 }
 
 .category-section {
-  border: 2px solid $black;
+  border-left: 2px solid $black;
+  border-right: 2px solid $black;
   height: 100vh;
 }
 
 .category-title {
   text-transform: capitalize;
   font-weight: 300;
+}
+
+#action-button {
+  font-size: 24px;
 }
