--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true%>
     <%#= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </head>
