views for forms

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,11 @@
 
-
-<h1 class="my-4">Add category</h1>
+<div class="new-top d-flex">
+  <div class="back-button-box bd-highlight p-3">
+  <%= link_to categories_path do %>
+    <i class="ph-arrow-circle-left" id="back-button"></i>
+  <% end %>
+  </div>
+  <h2 class="p-3">Add category</h2>
+</div>
 
 <%= render 'form', category: @category %>
