--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -179,3 +179,25 @@ a {
   border-bottom: 2px solid $black;
   border-right: 2px solid $black;
 }
+
+// form
+
+.form-control {
+  border: 2px solid $black;
+  border-radius: 0;
+}
+
+.submit-button {
+  border: 2px solid $black;
+  width: 100%;
+  border-radius: 0;
+  &:hover {
+    background-color: $yellow;
+  }
+}
+
+.form-items {
+  border-bottom: 2px solid $black;
+
+  // width: 50%;
+}
