--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,10 +1,13 @@
-<%= simple_form_for(@category) do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-  </div>
+<div class="form-items p-4">
+  <%= simple_form_for(@category) do |f| %>
 
-  <div class="form-actions">
-    <%= f.button :submit, class:'btn btn-outline-primary'  %>
-  </div>
-<% end %>
+    <div class="form-inputs">
+      <%= f.input :title %>
+    </div>
+
+    <div class="form-actions pt-3">
+      <%= f.button :submit, class:'submit-button'  %>
+    </div>
+  <% end %>
+</div>
