--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,12 +1,14 @@
-<%= simple_form_for([@category, @idea]) do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :status, priority: ['incomplete'], collection: [ "incomplete", "in progress", "done"]  %>
-  </div>
+  <div class="form-items p-4">
+    <%= simple_form_for([@category, @idea]) do |f| %>
+        <div class="form-inputs">
+          <%= f.input :title %>
+          <%= f.input :description %>
+          <%= f.input :status, priority: ['incomplete'], collection: [ "incomplete", "in progress", "done"]  %>
+        </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, class:'btn btn-outline-primary'  %>
+        <div class="form-actions pt-3">
+          <%= f.button :submit, class:'submit-button'  %>
+        </div>
+    <% end %>
   </div>
-<% end %>
