--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,10 +1,11 @@
 
   <div class="form-items p-4">
-    <%= simple_form_for([@category, @idea]) do |f| %>
+    <%= simple_form_for [@category, @idea] do |f| %>
         <div class="form-inputs">
           <%= f.input :title %>
           <%= f.input :description %>
           <%= f.input :status, priority: ['incomplete'], collection: [ "incomplete", "in progress", "done"]  %>
+          <%= f.hidden_field :id, value: @category_id %>
         </div>
 
         <div class="form-actions pt-3">
