--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,13 @@ a {
   }
 }
 
+.uppercase-small {
+  font-family: 'Space Mono', monospace;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .nav-link {
   color: $black;
   text-align:center;
@@ -125,7 +132,7 @@ a {
   // width: 25%;
   height: 150px;
   padding: 15px;
-  border-left: 2px solid $black;
+  border-right: 2px solid $black;
   border-bottom: 2px solid $black;
   // border-right: 2px solid $black;
   background-color: $white;
@@ -171,7 +178,6 @@ a {
 
 .back-button-box {
   border-right: 2px solid $black;
-  border-left: 2px solid $black;
   background-color: $yellow;
 }
 
@@ -185,6 +191,7 @@ a {
 .form-control {
   border: 2px solid $black;
   border-radius: 0;
+  background-color: $beige;
 }
 
 .submit-button {
@@ -200,4 +207,51 @@ a {
   border-bottom: 2px solid $black;
 
   // width: 50%;
+}
+
+// ideas index
+
+.progress-container {
+  border-bottom: 2px solid $black;
+}
+
+.not-started-title {
+  background-color: $beige;
+  height: 100px;
+  width: 100%;
+  border-bottom: 2px solid $black;
+}
+
+.not-started {
+  height: 100vh;
+  border-right: 2px solid $black;
+  border-left: 2px solid $black;
+}
+
+.in-progress-title {
+  background-color: $yellow;
+  height: 100px;
+  width: 100%;
+  border-bottom: 2px solid $black;
+}
+
+.in-progress {
+  height: 100vh;
+  border-right: 2px solid $black;
+}
+
+.done-title {
+  background-color: $green;
+  height: 100px;
+  width: 100%;
+  border-bottom: 2px solid $black;
+}
+
+.done {
+  height: 100vh;
+  border-right: 2px solid $black;
+}
+
+.row {
+  --bs-gutter-x: 0rem;
 }
