--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -35,15 +35,51 @@
   </div>
 </div>
 
-<ul>
-  <% if @category.ideas.nil? %>
-    <p>Start adding ideas</p>
-  <% else %>
-    <% @category.ideas.each do |idea| %>
-      <li>
-        <h1> <%= idea.title %> </h1>
-        <p> <%= idea.description %> </p>
-      </li>
+<div class="progress-container row">
+  <div class="not-started col-4">
+    <div class="not-started-title col-4 d-flex justify-content-center align-items-center">
+        <p class="uppercase-small">Not started</p>
+    </div>
+    <% @ideas.each do |idea| %>
+      <% if idea.category_id == @category.id %>
+        <% if idea.status == 'incomplete'  %>
+            <h1> <%= idea.title %> </h1>
+            <p> <%= idea.description %> </p>
+        <% end %>
+      <% end %>
     <% end %>
-  <% end %>
-</ul>
+  </div>
+
+  <div class="in-progress col-4">
+    <div class="in-progress-title col-4 d-flex justify-content-center align-items-center">
+        <p class="uppercase-small">In progress</p>
+    </div>
+    <% @ideas.each do |idea| %>
+      <% if idea.category_id == @category.id %>
+        <% if idea.status == 'in progress'  %>
+            <h1> <%= idea.title %> </h1>
+            <p> <%= idea.description %> </p>
+            <%= simple_form_for [@category, idea] do |f| %>
+              <%= f.input :status, priority: ['incomplete'], collection: [ "incomplete", "in progress", "done"]  %>
+              <%= f.button :submit, class:'submit-button'  %>
+            <% end %>
+        <% end %>
+      <% end %>
+    <% end %>
+
+  </div>
+
+  <div class="done col-4">
+    <div class="done-title col-4 d-flex justify-content-center align-items-center">
+        <p class="uppercase-small">Done</p>
+    </div>
+    <% @ideas.each do |idea| %>
+      <% if idea.category_id == @category.id %>
+        <% if idea.status == 'done'  %>
+            <h1> <%= idea.title %> </h1>
+            <p> <%= idea.description %> </p>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
