--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -255,3 +255,9 @@ a {
 .row {
   --bs-gutter-x: 0rem;
 }
+
+.idea {
+  border-bottom: 2px solid $black;
+  background-color: $white;
+  height: 100px;
+}
