--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,7 +18,7 @@
     <% @categories.each do |category| %>
       <% if category.user_id == @user.id %>
           <div class="category col-lg-4 col-sm-6 col-xs-12 d-flex align-items-end ">
-              <%= link_to category.title, category_ideas_path(category), class:'category-title' %>
+              <%= link_to category.title, category_path(category), class:'category-title' %>
 
               <div class="category-buttons d-flex">
                 <%= link_to edit_category_path(category) do %>
