--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,27 @@
-<h1> <%= @category.title %> </h1>
+
+<div class="idea-top d-flex">
+  <div class="back-button-box bd-highlight p-3">
+  <%= link_to categories_path do %>
+    <i class="ph-arrow-circle-left" id="back-button"></i>
+  <% end %>
+  </div>
+
+  <div class="cat-title bd-highlight w-100 p-3">
+    <h2>Your <%= @category.title %> ideas</h2>
+  </div>
+  <div class="new-idea-link bd-highlight p-3 d-flex align-items-center">
+    <% if policy(Category).create? %>
+      <%= link_to edit_category_path(@category) do %>
+          <i class="ph-pencil-simple-line" id="action-button"></i>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="new-idea-link bd-highlight p-3 d-flex align-items-center">
+    <% if policy(Category).create? %>
+      <%= link_to @category, method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
+          <i class="ph-trash" id="action-button"></i>
+      <% end %>
+    <% end %>
+  </div>
+</div>
