--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,11 @@
 @import "config/colors";
 
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 h1 {
   font-family: 'Space Grotesk', sans-serif;
