--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,15 +1,13 @@
 
   <div class="form-items p-4">
-    <%= simple_form_for [@category, @idea] do |f| %>
-        <div class="form-inputs">
-          <%= f.input :title %>
-          <%= f.input :description %>
-          <%= f.input :status, priority: ['incomplete'], collection: [ "incomplete", "in progress", "done"]  %>
-          <%= f.hidden_field :id, value: @category_id %>
-        </div>
+    <%= simple_form_for([@category, @progress, idea], local: true) do |form| %>
+      <div class='form-inputs'>
+        <%= form.label :content %>
+        <%= form.rich_text_area :content %>
+      </div>
 
-        <div class="form-actions pt-3">
-          <%= f.button :submit, class:'submit-button'  %>
-        </div>
+      <div class="form-actions pt-3">
+        <%= form.submit %>
+      </div>
     <% end %>
   </div>
