--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,10 +1,3 @@
-<div class="new-top d-flex">
-  <div class="back-button-box bd-highlight p-3">
-  <%= link_to category_ideas_path do %>
-    <i class="ph-arrow-circle-left" id="back-button"></i>
-  <% end %>
-  </div>
-  <h2 class="p-3">Add idea</h2>
-</div>
+<h2>New idea</h2>
 
-<%= render 'form', idea: @idea , category: @category %>
+<%= render 'form', idea: @idea %>
