--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -28,8 +28,8 @@
 
     <%= content_tag :div, class: :row, data: { controller: 'draggable' } do %>
       <% @category.progresses.each do |progress| %>
-          <div class="not-started col-4">
-            <div class="not-started-title col-4 d-flex justify-content-center align-items-center">
+          <div class="progress-container col-4">
+            <div class="progress-title col-4 d-flex justify-content-center align-items-center">
                 <p class="uppercase-small"> <%= progress.status %> </p>
             </div>
             <%# idea card %>
@@ -38,7 +38,11 @@
                 <%= render progress.ideas, category: @category, progress: progress %>
               <% end %>
             </div>
-          <%= link_to "New idea", [:new, @category, progress, :idea] %>
+              <%= link_to [:new, @category, progress, :idea] do %>
+                <div class="add-button-area d-flex justify-content-center align-items-center">
+                  <i class="ph-plus" id="add-button"></i>
+                </div>
+              <% end %>
           </div>
       <% end %>
     <% end %>
