--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -9,6 +9,7 @@
 // <action-text-attachment> element we wrap around attachments. Otherwise,
 // images in galleries will be squished by the max-width: 33%; rule.
 .trix-content {
+  // font-family: 'Space Mono', monospace!important;
   .attachment-gallery {
     > action-text-attachment,
     > .attachment {
