--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,8 +25,10 @@ h2, h3 {
 p {
   font-family: 'Space Mono', monospace;
 }
+
 body {
   background-color: $beige;
+  font-family: 'Space Mono', monospace;
 }
 
 #logo {
@@ -182,6 +184,10 @@ a {
   border-right: 2px solid $black;
 }
 
+// .idea-content {
+//   font-family: 'Space Mono', monospace;
+// }
+
 .new-idea-link {
   text-align: center;
   border-left: 2px solid $black;
@@ -276,4 +282,7 @@ a {
   border-bottom: 2px solid $black;
   background-color: $white;
   height: 100px;
+  &:hover {
+    background-color: $yellow;
+  }
 }
