--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,45 +1,63 @@
 
 <div class="idea-top d-flex">
-  <div class="back-button-box bd-highlight p-3">
   <%= link_to categories_path do %>
+  <div class="back-button-box bd-highlight p-3">
     <i class="ph-arrow-circle-left" id="back-button"></i>
-  <% end %>
   </div>
+  <% end %>
 
   <div class="cat-title bd-highlight w-100 p-3">
     <h2>Your <%= @category.title %> ideas</h2>
   </div>
-  <div class="new-idea-link bd-highlight p-3 d-flex align-items-center">
-    <% if policy(Category).create? %>
-      <%= link_to edit_category_path(@category) do %>
+
+
+    <%= link_to [:new, @category, @category.progresses.where(status:'not started')[0], :idea], class:'new-idea-link bd-highlight p-3 d-flex align-items-center' do %>
+        <div class="d-flex justify-content-center align-items-center">
+          <i class="ph-plus" id="action-button"></i>
+        </div>
+    <% end %>
+
+
+    <%# if policy(Category).create? %>
+      <%= link_to edit_category_path(@category), class:'edit-idea-link bd-highlight p-3 d-flex align-items-center' do %>
           <i class="ph-pencil-simple-line" id="action-button"></i>
       <% end %>
-    <% end %>
-  </div>
+    <%# end %>
 
-  <div class="new-idea-link bd-highlight p-3 d-flex align-items-center">
-    <% if policy(Category).create? %>
-      <%= link_to @category, method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
+    <%# if policy(Category).create? %>
+      <%= link_to @category, method: :delete, data: {confirm: "Are you sure you want to delete?"}, class:'delete-category-link bd-highlight p-3 d-flex align-items-center' do %>
           <i class="ph-trash" id="action-button"></i>
       <% end %>
-    <% end %>
+    <%# end %>
+
   </div>
-</div>
 
     <%= content_tag :div, class: :row, data: { controller: 'draggable' } do %>
       <% @category.progresses.each do |progress| %>
           <div class="progress-container col-4">
-            <div class="progress-title col-4 d-flex justify-content-center align-items-center">
+          <% if progress.status == 'not started'  %>
+            <div class="not-started-title col-4 d-flex justify-content-center align-items-center">
                 <p class="uppercase-small"> <%= progress.status %> </p>
             </div>
+            <% end %>
+
+            <% if progress.status == 'in progress'  %>
+            <div class="in-progress-title col-4 d-flex justify-content-center align-items-center">
+                <p class="uppercase-small"> <%= progress.status %> </p>
+            </div>
+            <% end %>
+
+
+            <% if progress.status == 'completed'  %>
+            <div class="complete-title col-4 d-flex justify-content-center align-items-center">
+                <p class="uppercase-small"> <%= progress.status %> </p>
+            </div>
+            <% end %>
+
             <%# idea card %>
-              <%= content_tag :ul, class: 'idea dropzone', data: { id: progress.id, target: 'draggable.progress' } do %>
+
+              <%= content_tag :ul, class: 'idea-space dropzone', data: { id: progress.id, target: 'draggable.progress' } do %>
                 <%= render progress.ideas, category: @category, progress: progress %>
-              <% end %>
-              <%= link_to [:new, @category, progress, :idea] do %>
-                <div class="add-button-area d-flex justify-content-center align-items-center">
-                  <i class="ph-plus" id="add-button"></i>
-                </div>
               <% end %>
           </div>
       <% end %>
