--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,13 +1,15 @@
 
+
   <div class="form-items p-4">
     <%= simple_form_for([@category, @progress, idea], local: true) do |form| %>
       <div class='form-inputs'>
-        <%= form.label :content %>
-        <%= form.rich_text_area :content %>
+        <%#= form.label :content %>
+        <%= form.rich_text_area :content, class:'mt-3 p-2' %>
       </div>
 
       <div class="form-actions pt-3">
-        <%= form.submit %>
+        <%#= form.submit %>
+        <%= form.button :submit, "Add idea", class:'submit-button mb-3' %>
       </div>
     <% end %>
   </div>
