--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,23 @@
-<div class="home-top">
-</div>
-
-<div class="home-hero d-flex">
-
-  <div class="home-text bd-highlight w-100">
-    <h1>Make ideas come true</h1>
-    <p>An organized approach to kickstarting your projects</p>
+<div class="home-all">
+  <div class="home-top d-flex">
+  <%= image_tag 'pink-star.png', class:'star' %>
+  <%= image_tag 'yellow-star.png', class:'star' %>
+  <%= image_tag 'red-star.png', class:'star' %>
   </div>
 
-  <div class="home-cta bd-highlight p-3 d-flex align-items-center">
-  <% if user_signed_in? %>
-    <%= link_to 'Browse my categories', categories_path %>
-  <% else %>
-    <%= link_to 'Get started', new_user_session_path %>
-  <% end %>
+  <div class="home-hero d-flex">
+
+    <div class="home-text bd-highlight w-100">
+      <h1>Make ideas come true</h1>
+      <p class="mt-3">An organized approach to kickstarting your projects</p>
+    </div>
+
+    <div class="home-cta bd-highlight p-3 d-flex align-items-center">
+    <% if user_signed_in? %>
+      <%= link_to 'Browse my categories', categories_path %>
+    <% else %>
+      <%= link_to 'Get started', new_user_session_path %>
+    <% end %>
+    </div>
   </div>
 </div>
