--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="home-all">
-  <div class="home-top d-flex">
-  <%= image_tag 'pink-star.png', class:'star' %>
-  <%= image_tag 'yellow-star.png', class:'star' %>
-  <%= image_tag 'red-star.png', class:'star' %>
+  <div class="home-top">
+    <div class="star-contain">
+      <%= image_tag 'star-pattern-02.png', class:'star-pattern' %>
+    </div>
   </div>
 
   <div class="home-hero d-flex">
