--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,16 @@ p {
 body {
   background-color: $beige;
   font-family: 'Space Mono', monospace;
+  cursor: asset-url("cursor.svg"), auto;
+}
+
+::selection {
+  background: $green;
+  color: $black; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: $green;
+  color: $black;
 }
 
 #logo {
@@ -42,6 +52,7 @@ body {
 .logo-box {
   border-right: 2px solid $black;
   text-align:center;
+  background-color: $pink;
 }
 
 .nav-button {
@@ -74,7 +85,7 @@ a {
 
 .nav-link {
   color: $black;
-  text-align:center;
+  text-align: center;
   &:hover {
     color: $black;
   }
@@ -118,8 +129,8 @@ a {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 50vh;
-  background-color: $beige;
+  height: 40vh;
+  background-color: $yellow;
 }
 
 .home-text {
@@ -306,9 +317,9 @@ a {
   border-bottom: 2px solid $black;
   background-color: $white;
   height: 100px;
+  cursor: grab;
   &:hover {
     background-color: $yellow;
-    cursor: hand;
   }
 }
 
