--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,18 +18,19 @@
     <% @categories.each do |category| %>
       <% if category.user_id == @user.id %>
         <div class="col-lg-3 col-sm-6 col-xs-12">
-          <%= link_to category_path(category) do %>
-          <div class="category d-flex align-items-end justify-content-between">
-            <p class='category-title'> <%= category.title %> </p>
-            <div class="category-buttons d-flex">
-              <%= link_to edit_category_path(category) do %>
-                <i class="ph-pencil-simple-line" id="action-button"></i>
-              <% end %>
-              <%= link_to category, method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
-                <i class="ph-trash" id="action-button"></i>
-              <% end %>
+          <%= link_to category_path(category), class:'' do %>
+            <div class="category d-flex align-items-end justify-content-between">
+              <p class='category-title'> <%= category.title %> </p>
+
+              <div class="d-flex">
+                <%= link_to edit_category_path(category) do %>
+                  <i class="ph-pencil-simple-line" id="action-button"></i>
+                <% end %>
+                <%= link_to category, method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
+                  <i class="ph-trash" id="action-button"></i>
+                <% end %>
+              </div>
             </div>
-          </div>
           <% end %>
         </div>
       <% end %>
