--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -263,6 +263,17 @@ a {
   border: 2px solid $black;
   width: 100%;
   border-radius: 0;
+  text-align: center;
+  &:hover {
+    background-color: $yellow;
+  }
+}
+
+.oauth-login {
+  border: 2px solid $black;
+  border-radius: 0;
+  text-align: center;
+  margin-right: 10px;
   &:hover {
     background-color: $yellow;
   }
