--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -9,7 +9,7 @@
 
       <div class="form-actions pt-3">
         <%#= form.submit %>
-        <%= form.button :submit, "Add idea", class:'submit-button mb-3' %>
+        <%= form.button :submit, "Add new idea", class:'submit-button mb-3' %>
       </div>
     <% end %>
   </div>
