back button hover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -244,6 +244,9 @@ a {
 .back-button-box {
   border-right: 2px solid $black;
   background-color: $yellow;
+  &:hover {
+    background-color: $green;
+  }
 }
 
 .new-top {
