--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="cat-title bd-highlight w-100 p-3">
-      <h2>Create new idea</h2>
+      <h2>Add new <%= @category.title %> idea</h2>
   </div>
 </div>
 
