--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -398,7 +398,8 @@ a {
   font-style: italic;
 }
 
-// .star {
-//   max-width: 100%;
-//   max-height: 100%;
-// }
+@media (max-width: 400px) {
+  .home-hero {
+    flex-direction: column;
+  }
+}
